--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node_modules/next/dist/bin/next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.8.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.28",
+    "iron-session": "^8.0.1",
     "next": "^14.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -17,6 +20,7 @@
     "react-intersection-observer": "^9.8.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
